--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.8.3",
     "cloudinary": "^1.41.3",
     "framer-motion": "^12.5.0",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "lucide-react": "^0.482.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
