--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "browser-image-compression": "^2.0.2",
     "cloudinary": "^1.41.3",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
