--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5"
   },
