--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 
-MONGO_URI=mongodb://localhost:27017/Demo1
+MONGO_URI=mongodb://localhost:27017/NutriWings
 PORT=5000
 
 CLOUDINARY_CLOUD_NAME=dhjplff89
