--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 
-MONGO_URI=mongodb://localhost:27017/NutriWings
+MONGO_URI=mongodb+srv://murthyt:murthyt123@uskillbook.dbi0v.mongodb.net/?retryWrites=true&w=majority&appName=uskillbook
 PORT=5000
 
 CLOUDINARY_CLOUD_NAME=dhjplff89
